--- a/views/surveys/new-survey.ejs
+++ b/views/surveys/new-survey.ejs
@@ -9,24 +9,25 @@
 <body>
   <% include ../partials/header.ejs %>
 
-  <h2>Create New Survey</h2>
+  <div class="form-container">
+    <h2>Create New Survey</h2>
+    <form action="/surveys" method="POST">
+      <div>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required>
+      </div>
+      <div>
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea>
+      </div>
+      <div id="questions-container">
+        <!-- Question inputs will go here -->
+      </div>
+      <button type="button" id="add-question">Add Question</button>
+      <button type="submit">Create Survey</button>
+    </form>
+  </div>
   
-  <form action="/surveys" method="POST">
-    <div>
-      <label for="title">Title:</label>
-      <input type="text" id="title" name="title" required>
-    </div>
-    <div>
-      <label for="description">Description:</label>
-      <textarea id="description" name="description" required></textarea>
-    </div>
-    <div id="questions-container">
-      <!-- Question inputs will go here -->
-    </div>
-    <button type="button" id="add-question">Add Question</button>
-    <button type="submit">Create Survey</button>
-  </form>
-
   <script>
     document.getElementById('add-question').addEventListener('click', function() {
       var container = document.getElementById('questions-container');
