--- a/views/surveys/survey-detail.ejs
+++ b/views/surveys/survey-detail.ejs
@@ -9,23 +9,25 @@
 <body>
   <% include ../partials/header %>
 
-  <h1><%= survey.title %></h1>
-  <p><%= survey.description %></p>
-
-  <form action="/surveys/<%= survey._id %>/submit" method="post">
-    <% survey.questions.forEach(function(question, index) { %>
-      <div>
-        <h3>Question <%= index + 1 %>: <%= question.questionText %></h3>
-        <% question.options.forEach(function(option) { %>
-          <label>
-            <input type="radio" name="question_<%= index %>" value="<%= option.optionText %>">
-            <%= option.optionText %>
-          </label>
-        <% }) %>
-      </div>
-    <% }) %>
-    <button type="submit">Submit Survey</button>
-  </form>
+  <div class="survey-container">
+    <h1 class="survey-title"><%= survey.title %></h1>
+    <p class="survey-description"><%= survey.description %></p>
+    <form action="/surveys/<%= survey._id %>/submit" method="post">
+      <% survey.questions.forEach(function(question, index) { %>
+        <div class="question">
+          <h3>Question <%= index + 1 %>: <%= question.questionText %></h3>
+          <% question.options.forEach(function(option) { %>
+            <label class="option">
+              <input type="radio" name="question_<%= index %>" value="<%= option.optionText %>">
+              <span class="checkmark"></span>
+              <%= option.optionText %>
+            </label>
+          <% }); %>
+        </div>
+      <% }); %>
+      <button type="submit">Submit Survey</button>
+    </form>
+  </div>  
 
   <% include ../partials/footer %>
 </body>
