--- a/views/surveys/list-survey.ejs
+++ b/views/surveys/list-survey.ejs
@@ -9,18 +9,16 @@
 <body>
   <% include ../partials/header.ejs %>
 
-  <h2>Survey List</h2>
-
   <div>
+    <h2>Survey List</h2>
     <% if (surveys.length > 0) { %>
-      <ul>
+      <ul class="survey-list">
         <% surveys.forEach(function(survey) { %>
-          <li>
+          <li class="survey-item">
             <a href="/surveys/<%= survey._id %>"><%= survey.title %></a>
-            - <a href="/surveys/<%= survey._id %>/edit">Edit</a>
-            - <form action="/surveys/<%= survey._id %>?_method=DELETE" method="POST" style="display: inline;">
-                <button type="submit">Delete</button>
-              </form>
+            <form action="/surveys/<%= survey._id %>?_method=DELETE" method="POST" style="display: inline;">
+              <button type="submit" class="button-inline">Delete</button>
+            </form>
           </li>
         <% }) %>
       </ul>
@@ -28,9 +26,9 @@
       <p>No surveys found.</p>
     <% } %>
   </div>
-
-  <a href="/surveys/new">Create New Survey</a>
-
+  
+  <a href="/surveys/new" class="create-survey-link">Create New Survey</a>
+  
   <% include ../partials/footer.ejs %>
 </body>
 </html>
