--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/assignments">Assignments</a></li>
+        <li><a href="/assignments">As</a></li>
       </ul>
     </nav>
   </header>
