--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<footer>
-    <p>&copy; 2023 Assignment Tracker. All rights reserved.</p>
-  </footer>
-  
+<footer class="footer-main">
+  <div class="footer-content">
+    &copy; 2023 Assignment Tracker. All rights reserved.
+  </div>
+</footer>
