--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -479,3 +479,11 @@ button[type="submit"]:hover {
     font-size: 12px; /* Smaller font size on smaller screens */
   }
 }
+
+.survey-quote {
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.5em; /* Adjust the size as needed */
+  color: #555; /* Adjust the color as needed */
+}
