--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,12 @@
   <%- include('partials/header') %>
 
   <div class="landing-page">
+    <p class="survey-quote">"Surveys show that surveys never lie." - Natalie Angier</p>
     <h1>Welcome to SurveyMaster</h1>
     <p>The ultimate tool for creating and managing your surveys.</p>
     <a href="/surveys/new" class="hero-button">Create a New Survey</a>
   </div>
+  
 
   <%- include('partials/footer') %>
 </body>
