--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer-main">
   <div class="footer-content">
-    &copy; 2023 Assignment Tracker. All rights reserved.
+    &copy; 2023 Survey Site. All rights reserved.
   </div>
 </footer>
