--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
     <p class="survey-quote">"Surveys show that surveys never lie." - Natalie Angier</p>
     <h1>Welcome to SurveyMaster</h1>
     <p>The ultimate tool for creating and managing your surveys.</p>
-    <a href="/surveys/new" class="hero-button">Create a New Survey</a>
+    <a href="/surveys/new-survey" class="hero-button">Create a New Survey</a>
   </div>
   
 
