--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
       </div>
       <ul>
         <li><a href="/" class="nav-item">Home</a></li>
-        <li><a href="/surveys/new-survey" class="nav-item">Create Survey</a></li>
+        <li><a href="/surveys/new" class="nav-item">Create Survey</a></li>
         <li><a href="/surveys" class="nav-item">Survey List</a></li>
         <!-- Add more navigation items as needed -->
       </ul>
