--- a/views/surveys/new-survey.ejs
+++ b/views/surveys/new-survey.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <%- include('partials/header') %>
+  <% include ../partials/header.ejs %>
 
   <div class="form-container">
     <h2>Create New Survey</h2>
@@ -54,6 +54,6 @@
     });
   </script>
 
-<%- include('partials/footer') %>
+  <% include ../partials/footer.ejs %>
 </body>
 </html>
