--- a/views/surveys/survey-detail.ejs
+++ b/views/surveys/survey-detail.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <%- include('partials/header') %>
+  <% include ../partials/header %>
 
   <div class="survey-container">
     <h1 class="survey-title"><%= survey.title %></h1>
@@ -29,6 +29,6 @@
     </form>
   </div>  
 
-  <%- include('partials/footer') %>
+  <% include ../partials/footer %>
 </body>
 </html>
