--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <% include ../partials/header %>
+  <%- include('partials/header') %>
 
   <div class="landing-page">
     <p class="survey-quote">"Surveys show that surveys never lie." - Natalie Angier</p>
@@ -17,6 +17,6 @@
   </div>
   
 
-  <% include ../partials/footer %>
+  <%- include('partials/footer') %>
 </body>
 </html>
