--- a/views/surveys/new-survey.ejs
+++ b/views/surveys/new-survey.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <%- include('partials/header') %>
+  <%= include('partials/header') %>
 
   <div class="form-container">
     <h2>Create New Survey</h2>
