--- a/views/surveys/new-survey.ejs
+++ b/views/surveys/new-survey.ejs
@@ -13,7 +13,7 @@
         <textarea id="description" name="description" required></textarea>
       </div>
       <div id="questions-container">
-        <!-- Question inputs will go heree -->
+        <!-- Question inputs will go here -->
       </div>
       <button type="button" id="add-question">Add Question</button>
       <button type="submit">Create Survey</button>
