--- a/views/surveys/edit-survey.ejs
+++ b/views/surveys/edit-survey.ejs
@@ -1,9 +1,13 @@
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to SurveyMaster</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 
   <%- include('../partials/header') %>
   <div class="edit-survey-form">
     <h2>Edit Survey</h2>
-    <form action="/surveys/ method="POST">
-        <div>
+    <form action="/surveys" method="POST">
+      <div>
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="<%= survey.title %>" required>
         </div>
