--- a/views/surveys/survey-detail.ejs
+++ b/views/surveys/survey-detail.ejs
@@ -1,3 +1,7 @@
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to SurveyMaster</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 
   <%- include('../partials/header') %>
 
