--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,7 @@
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to SurveyMaster</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <header class="header-main">
     <nav class="header-nav">
       <div class="header-logo">
