add-question style

--- a/views/surveys/new-survey.ejs
+++ b/views/surveys/new-survey.ejs
@@ -19,7 +19,7 @@
       <div id="questions-container">
         <!-- Question inputs will go here -->
       </div>
-      <button type="button" id="add-question">Add Question</button>
+      <button type="button" id="add-question" class="btn-add-question"></button>>Add Question</button>
       <button type="submit">Create Survey</button>
     </form>
   </div>
