--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -488,3 +488,16 @@ button[type="submit"]:hover {
   color: #555; /* Adjust the color as needed */
 }
 
+.btn-add-question {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+}
