--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -463,7 +463,7 @@ button[type="submit"]:hover {
   color: #ffffff; /* White text color */
   text-align: center; /* Center-align the text */
   padding: 20px 10px; /* Padding inside the footer */
-  position: fixed; /* Position relative for absolute positioning inside elements */
+  position: relative; /* Position relative for absolute positioning inside elements */
   bottom: 0; /* Stick to the bottom */
   width: 100%; /* Full width */
 }
@@ -488,16 +488,3 @@ button[type="submit"]:hover {
   color: #555; /* Adjust the color as needed */
 }
 
-.btn-add-question {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 4px;
-}
