--- a/views/surveys/edit-survey.ejs
+++ b/views/surveys/edit-survey.ejs
@@ -4,35 +4,64 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 
   <%- include('../partials/header') %>
+  
   <div class="edit-survey-form">
     <h2>Edit Survey</h2>
-    <form action="/surveys" method="POST">
+    <form action="/surveys/<%= survey._id %>?_method=PUT" method="post">
       <div>
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="<%= survey.title %>" required>
-        </div>
-        <div>
+      </div> 
+      <div>
         <label for="description">Description:</label>
         <textarea id="description" name="description" required><%= survey.description %></textarea>
-        </div>
+      </div>
+      <div id="questions-container">
         <% survey.questions.forEach(function(question, questionIndex) { %>
-        <div class="question">
+          <div class="question">
             <label for="questionText">Question:</label>
             <input type="text" name="questions[<%= questionIndex %>][questionText]" value="<%= question.questionText %>" required>
             <div class="options-container">
-            <% question.options.forEach(function(option, optionIndex) { %>
+              <% question.options.forEach(function(option, optionIndex) { %>
                 <label for="optionText">Option:</label>
-                <input type="text" name="questions[<%= questionIndex %>][options][<%= optionIndex %>]" value="<%= option.optionText %>" required>
-            <% }) %>
-            <button type="button" class="add-option">Add Option</button>
+                <input type="text" name="questions[<%= questionIndex %>][options][<%= optionIndex %>][optionText]" value="<%= option.optionText %>" required>
+              <% }) %>
+              <button type="button" class="add-option">Add Option</button>
             </div>
-        </div>
+          </div>
         <% }) %>
-        <button type="submit">Update Survey</button>
+      </div>
+      <button type="button" id="add-question" class="add-question">Add Question</button>
+      <button type="submit">Update Survey</button>
     </form>
   </div>
   <script>
-    // Similar JavaScript as in new-survey.ejs to handle adding new options dynamically
-  </script>
+    document.getElementById('add-question').addEventListener('click', function() {
+  var container = document.getElementById('questions-container');
+  var questionIndex = container.getElementsByClassName('question').length;
+  var questionDiv = document.createElement('div');
+  questionDiv.className = 'question';
+  questionDiv.innerHTML = `
+    <label for="questionText">Question:</label>
+    <input type="text" name="questions[${questionIndex}][questionText]" required>
+    <div class="options-container">
+      <label>Options:</label>
+      <input type="text" name="questions[${questionIndex}][options][0][optionText]" required>
+      <button type="button" class="add-option">Add Option</button>
+    </div>
+  `;
+  container.appendChild(questionDiv);
 
+  questionDiv.querySelector('.add-option').addEventListener('click', function() {
+    var optionsContainer = this.parentNode;
+    var optionIndex = optionsContainer.querySelectorAll('input[type=text]').length;
+    var input = document.createElement('input');
+    input.type = 'text';
+    input.name = `questions[${questionIndex}][options][${optionIndex}][optionText]`;
+    input.required = true;
+    optionsContainer.insertBefore(input, this);
+  });
+});
+  </script>
+  
   <%- include('../partials/footer') %>
