--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,6 @@
 body {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
-  background-image: url('./teamlogo.png');
 }
 
 .landing-page {
@@ -466,7 +465,7 @@ button[type="submit"]:hover {
   color: #ffffff; /* White text color */
   text-align: center; /* Center-align the text */
   padding: 20px 10px; /* Padding inside the footer */
-  position: fixed; /* Position relative for absolute positioning inside elements */
+  position: relative; /* Position relative for absolute positioning inside elements */
   bottom: 0; /* Stick to the bottom */
   width: 100%; /* Full width */
 }
